angular.json changes | optimizations

--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,15 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization": {
+                "scripts": true,
+                "styles": {
+                   "minify": false,
+                   "inlineCritical": false
+                },
+                "fonts": true
+              }
             },
             "development": {
               "buildOptimizer": false,
@@ -61,6 +69,7 @@
               "sourceMap": true,
               "namedChunks": true
             }
+            
           },
           "defaultConfiguration": "production"
         },
