--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "rental-service",
   "version": "0.0.0",
   "scripts": {
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^12.2.0",
+    "@angular/compiler-cli": "^12.1.5",
     "@angular/animations": "~12.1.2",
     "@angular/common": "~12.1.2",
     "@angular/compiler": "~12.1.2",
@@ -18,11 +21,14 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
-    "express": "^4.17.1",
-    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "typescript": "~4.3.2"
+  },
+  "engines": {
+    "node": "14.17.3",
+    "npm": "6.14.13"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.2",
