--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rental-service",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "ng build --output-path angularapp  --aot --prod",
     "heroku-postbuild": "ng build --prod",
     "ng": "ng",
     "start": "node server.js",
