--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "postinstall": "ng build --output-path rental-service  --aot --prod",
-    "heroku-postbuild": "ng build --prod",
+    // "heroku-postbuild": "ng build --prod",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
