--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "rental-service",
   "version": "0.0.0",
   "scripts": {
-    "postinstall": "ng build --output-path rental-service  --aot --prod",
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ng build --output-path rental-service  --aot --prod"
   },
   "private": true,
   "dependencies": {
