--- a/package.json
+++ b/package.json
@@ -2,29 +2,30 @@
   "name": "rental-service",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "node server.js",
-    "build": "ng build --prod",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "postinstall": "ng build --output-path rental-service  --aot --prod"
-  },
+    "dev": "react-scripts start",
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
+    },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^12.2.0",
-    "@angular/compiler-cli": "^12.1.5",
     "@angular/animations": "~12.1.2",
+    "@angular/cli": "^12.2.0",
     "@angular/common": "~12.1.2",
     "@angular/compiler": "~12.1.2",
+    "@angular/compiler-cli": "^12.1.5",
     "@angular/core": "~12.1.2",
     "@angular/forms": "~12.1.2",
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
     "rxjs": "~6.6.0",
+    "serve": "^12.0.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4",
-    "typescript": "~4.3.2"
+    "typescript": "~4.3.2",
+    "zone.js": "~0.11.4"
   },
   "engines": {
     "node": "14.17.3",
