--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "rental-service",
   "version": "0.0.0",
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
-    },
+    "ng": "ng",
+    "start": "node server.js",
+    "build": "ng build --prod",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "postinstall": "ng build --output-path rental-service  --aot --prod"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.2",
